--- a/WEB3/src/views/jokalariDenda/jokalariDenda.css
+++ b/WEB3/src/views/jokalariDenda/jokalariDenda.css
@@ -34,7 +34,7 @@ body {
     margin-right: 30px;
     border: 1px solid;
     border-radius: 20px;
-    backdrop-filter: blur(5px);
+    background-color: orange;
 
 }
 
