--- a/WEB3/src/views/logIn/logIn.css
+++ b/WEB3/src/views/logIn/logIn.css
@@ -7,20 +7,33 @@
     list-style: none;
     font-family: 'Nunito', sans-serif;
 }
-
 body {
-    background-image: url("holandaBackground.jpeg");
+    background-image: url('holandaBackground.jpeg');
+    /* Actualiza con la ruta correcta de la imagen */
     background-size: cover;
+    /* Asegura que la imagen cubra todo el espacio disponible */
+    background-position: center;
+    /* Centra la imagen en la página */
     background-repeat: no-repeat;
-    
+    /* Evita que la imagen se repita */
+    background-attachment: fixed;
+    /* La imagen de fondo es fija en relación con la ventana de visualización */
 }
-@media only screen and (max-width: 768px) {
+
+@media (max-width: 600px) {
     body {
-        background-image: url("holandaBackground.jpeg");
-        background-size:auto;
-        background-repeat:initial;
+        background-image: url('holandaBackground.jpeg');
+        /* Puedes usar la misma imagen o una diferente para móviles */
+        background-size: cover;
+        /* Asegura que la imagen cubra todo el espacio disponible */
+        background-position: center;
+        /* Centra la imagen en la página */
+        background-repeat: no-repeat;
+        /* Evita que la imagen se repita */
+        /* No usamos 'background-attachment: fixed;' en móviles para prevenir problemas de rendimiento */
     }
 }
+
 .wrapper {
     display: flex;
     max-width: 560px;
