--- a/WEB3/src/views/test/test.css
+++ b/WEB3/src/views/test/test.css
@@ -6,6 +6,31 @@
      outline: none;
      text-decoration: none;
      list-style: none;
-     font-size: 100px;
      font-family: 'Nunito', sans-serif;
 }
+body {
+     background-image: url('testGalderakFondo.webp');
+     /* Actualiza con la ruta correcta de la imagen */
+     background-size: cover;
+     /* Asegura que la imagen cubra todo el espacio disponible */
+     background-position: center;
+     /* Centra la imagen en la página */
+     background-repeat: no-repeat;
+     /* Evita que la imagen se repita */
+     background-attachment: fixed;
+     /* La imagen de fondo es fija en relación con la ventana de visualización */
+ }
+ 
+ @media (max-width: 600px) {
+     body {
+         background-image: url('testGalderakFondo.webp');
+         /* Puedes usar la misma imagen o una diferente para móviles */
+         background-size: cover;
+         /* Asegura que la imagen cubra todo el espacio disponible */
+         background-position: center;
+         /* Centra la imagen en la página */
+         background-repeat: no-repeat;
+         /* Evita que la imagen se repita */
+         /* No usamos 'background-attachment: fixed;' en móviles para prevenir problemas de rendimiento */
+     }
+ }
