--- a/WEB3/src/css/header.css
+++ b/WEB3/src/css/header.css
@@ -4,7 +4,7 @@ body {
 }
 
 .header {
-  background-color: rgb(255, 166, 0);
+  background-color: var(--mainColor);
   padding: 20px 0;
 }
 
@@ -43,7 +43,7 @@ nav ul li {
 }
 
 nav ul li a {
-  border: 2px solid rgb(23, 21, 21);
+  border: 2px solid var(--mainColor);
   border-radius: 5px;
   padding: 5px;
 
@@ -67,7 +67,7 @@ nav ul li a:hover {
 }
 
 .btn-primary:hover {
-  background-color: orange;
+  background-color: var(--mainColor) orange;
   border: 2px solid white;
 }
 
@@ -118,14 +118,6 @@ nav ul li a:hover {
   z-index: -1;
   filter: blur(30px);
   border-radius: 20px;
-  background-color: #ffca99;
-  background-image: radial-gradient(at 85% 51%, hsla(60, 60%, 61%, 1) 0px, transparent 50%),
-    radial-gradient(at 74% 68%, rgb(237, 188, 156) 0px, transparent 50%),
-    radial-gradient(at 64% 79%, rgb(236, 193, 137) 0px, transparent 50%),
-    radial-gradient(at 75% 16%, rgb(226, 189, 141) 0px, transparent 50%),
-    radial-gradient(at 90% 65%, rgb(227, 208, 99) 0px, transparent 50%),
-    radial-gradient(at 91% 83%, rgb(234, 213, 117) 0px, transparent 50%),
-    radial-gradient(at 72% 91%, rgb(239, 213, 143) 0px, transparent 50%);
 }
 
 .input__button__shadow {
