--- a/WEB3/src/css/header.css
+++ b/WEB3/src/css/header.css
@@ -19,7 +19,7 @@ body {
 
 
 h2 {
-  color: white;
+  color: var(--footerColor);
   margin-right: 20px;
 }
 
@@ -60,7 +60,7 @@ nav ul li a:hover {
 
 .btn-primary {
   background-color: transparent;
-  border: 2px solid white;
+  border: 2px solid var(--footerColor);
   font-size: 80%;
   height: 40px;
   width: 40px;
@@ -68,24 +68,46 @@ nav ul li a:hover {
 
 .btn-primary:hover {
   background-color: var(--mainColor) orange;
-  border: 2px solid white;
+  border: 2px solid var(--footerColor);
 }
 
 .fa-bars {
-  color: white;
+  color: var(--footerColor);
   font-size: 20px;
 }
 
+
+.GordeBtn {
+  padding: 10px 25px;
+  border: none;
+  background-color: var(--mainColor); 
+  color: white;
+  font-size: 16px;
+  font-family: 'Arial', sans-serif;
+  cursor: pointer;
+  border-radius: 5px; 
+  transition: background-color 0.3s ease;
+  outline: none;
+}
+
+.GordeBtn:focus {
+  box-shadow: 0 0 0 2px var(--mainColor);
+}
+
+.GordeBtn:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
 
 
 
 .logInBtnA {
   background-color: transparent;
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid var(--footerColor);
   padding: 5px;
   text-decoration: none;
   color: rgb(255, 255, 255);
-
+  color: var(--footerColor);
   cursor: pointer;
   transition: background-color 0.3s ease;
   /* Transición suave del color de fondo */
@@ -153,14 +175,14 @@ nav ul li a:hover {
   border: 0px solid;
   border-bottom: 2px solid;
   background-color: transparent;
-  color: white;
+  color: var(--footerColor);
   padding: 5px;
 }
 
 #selectHizkuntzaAukeratzeko {
   border: 0px solid;
   background-color: transparent;
-  color: white;
+  color: var(--footerColor);
   padding: 0px;
 }
 
