--- a/WEB3/src/views/jokalariDenda/jokalariDenda.css
+++ b/WEB3/src/views/jokalariDenda/jokalariDenda.css
@@ -65,12 +65,12 @@ body {
 }
 
 .probaBack {
-    color: white;
+    color: var(--footerColor);
     text-align: center;
     padding-bottom: 2px;
 }
 .probaBack1 {
-    color: white;
+    color: var(--footerColor);
     text-align: left;
     padding-top: 6px;
 }
@@ -78,7 +78,7 @@ body {
 .btnArrowJokalariak {
     border: 0px solid;
     background-color: transparent;
-    color: white;
+    color: var(--footerColor);
     font-size: 30px;
 }
 
@@ -104,7 +104,7 @@ body {
 #selectTaldea {
     border: 0px solid;
     background-color: transparent;
-    color: white;
+    color: var(--footerColor);
     padding: 5px;
 }
 
@@ -115,7 +115,7 @@ body {
     border: 0px solid;
     border-bottom: 2px solid;
     background-color: transparent;
-    color: white;
+    color: var(--footerColor);
     padding: 5px;
   }
 
