--- a/WEB3/src/views/test/test.css
+++ b/WEB3/src/views/test/test.css
@@ -7,4 +7,28 @@
      text-decoration: none;
      list-style: none;
      font-family: 'Nunito', sans-serif;
+     color: var(--footerColor);
 }
+
+.question-container {
+     border: 2px solid black; /* Borde negro */
+     background-color: var(--mainColor); /* Fondo naranja */
+     padding: 10px;
+     margin-bottom: 20px;
+   }
+   
+   .question {
+     font-weight: bold;
+     margin-bottom: 10px;
+     text-align: center;
+   }
+   
+   .answers {
+     list-style-type: none;
+     padding-left: 0;
+   }
+   
+   .answers li {
+     margin-bottom: 5px;
+   }
+   
