--- a/WEB3/src/css/header.css
+++ b/WEB3/src/css/header.css
@@ -35,11 +35,11 @@ nav ul li {
 }
 
 .offcanvas-body {
-  background-color: #b6b6b6;
+  background-color: #ffbd7b;
 }
 
 .offcanvas-header {
-  background-color: #b6b6b6;
+  background-color: #ffbd7b;
 }
 
 nav ul li a {
