--- a/WEB3/src/views/jokalariDenda/jokalariDenda.css
+++ b/WEB3/src/views/jokalariDenda/jokalariDenda.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-image: url('jokalariDendaFondoa.webp');
+    background-image: url('jokalariDendaFondoa.jpeg');
     /* Actualiza con la ruta correcta de la imagen */
     background-size: cover;
     /* Asegura que la imagen cubra todo el espacio disponible */
@@ -23,7 +23,7 @@ body {
 
 @media (max-width: 600px) {
     body {
-        background-image: url('jokalariDendaFondoa.webp');
+        background-image: url('jokalariDendaFondoa.jpeg');
         /* Puedes usar la misma imagen o una diferente para móviles */
         background-size: cover;
         /* Asegura que la imagen cubra todo el espacio disponible */
