--- a/WEB3/src/views/plantilla/plantilla.css
+++ b/WEB3/src/views/plantilla/plantilla.css
@@ -183,7 +183,7 @@
 }
 
 body {
-    background-image: url('JokalarienArgazkiaHolanda.webp');
+    background-image: url('JokalarienArgazkiaHolanda.jpeg');
     /* Actualiza con la ruta correcta de la imagen */
     background-size: cover;
     /* Asegura que la imagen cubra todo el espacio disponible */
@@ -197,7 +197,7 @@ body {
 
 @media (max-width: 600px) {
     body {
-        background-image: url('JokalarienArgazkiaHolanda.webp');
+        background-image: url('JokalarienArgazkiaHolanda.jpeg');
         /* Puedes usar la misma imagen o una diferente para móviles */
         background-size: cover;
         /* Asegura que la imagen cubra todo el espacio disponible */
