Datu curiosok mobileako jarrita

--- a/WEB3/src/views/datuKuriosoak/datuKuriosoak.css
+++ b/WEB3/src/views/datuKuriosoak/datuKuriosoak.css
@@ -82,6 +82,9 @@ input[type="submit"]:hover {
         width: 90%;
         max-width: none;
     }
+    .dato-curioso {
+        width: 300px;
+    }
 }
 body {
     background-image: url('holandakoFondoaInter.jpeg');
