--- a/WEB3/src/views/partidaJolastu/partidaJolastu.css
+++ b/WEB3/src/views/partidaJolastu/partidaJolastu.css
@@ -1,29 +1,4 @@
-body {
-    background-image: url('holandaEstadioaPartidoaJolasteko.webp');
-    /* Actualiza con la ruta correcta de la imagen */
-    background-size: cover;
-    /* Asegura que la imagen cubra todo el espacio disponible */
-    background-position: center;
-    /* Centra la imagen en la página */
-    background-repeat: no-repeat;
-    /* Evita que la imagen se repita */
-    background-attachment: fixed;
-    /* La imagen de fondo es fija en relación con la ventana de visualización */
-}
 
-@media (max-width: 600px) {
-    body {
-        background-image: url('holandaEstadioaPartidoaJolasteko.webp');
-        /* Puedes usar la misma imagen o una diferente para móviles */
-        background-size: cover;
-        /* Asegura que la imagen cubra todo el espacio disponible */
-        background-position: center;
-        /* Centra la imagen en la página */
-        background-repeat: no-repeat;
-        /* Evita que la imagen se repita */
-        /* No usamos 'background-attachment: fixed;' en móviles para prevenir problemas de rendimiento */
-    }
-}
 .h1{
     font-size: 40px;
     font-weight: 700;
@@ -49,32 +24,7 @@ body {
     border-radius: 20px;
     padding: 20px;
 }
-body {
-    background-image: url('holandaEstadioaPartidoaJolasteko.webp');
-    /* Actualiza con la ruta correcta de la imagen */
-    background-size: cover;
-    /* Asegura que la imagen cubra todo el espacio disponible */
-    background-position: center;
-    /* Centra la imagen en la página */
-    background-repeat: no-repeat;
-    /* Evita que la imagen se repita */
-    background-attachment: fixed;
-    /* La imagen de fondo es fija en relación con la ventana de visualización */
-}
 
-@media (max-width: 600px) {
-    body {
-        background-image: url('holandaEstadioaPartidoaJolasteko.webp');
-        /* Puedes usar la misma imagen o una diferente para móviles */
-        background-size: cover;
-        /* Asegura que la imagen cubra todo el espacio disponible */
-        background-position: center;
-        /* Centra la imagen en la página */
-        background-repeat: no-repeat;
-        /* Evita que la imagen se repita */
-        /* No usamos 'background-attachment: fixed;' en móviles para prevenir problemas de rendimiento */
-    }
-}
 .h1{
     font-size: 40px;
     font-weight: 700;
@@ -101,7 +51,7 @@ body {
     padding: 20px;
 }
 body {
-    background-image: url('holandaEstadioaPartidoaJolasteko.webp');
+    background-image: url('holandaEstadioaPartidoaJolasteko.jpeg');
     /* Actualiza con la ruta correcta de la imagen */
     background-size: cover;
     /* Asegura que la imagen cubra todo el espacio disponible */
@@ -115,7 +65,7 @@ body {
 
 @media (max-width: 600px) {
     body {
-        background-image: url('holandaEstadioaPartidoaJolasteko.webp');
+        background-image: url('holandaEstadioaPartidoaJolasteko.jpeg');
         /* Puedes usar la misma imagen o una diferente para móviles */
         background-size: cover;
         /* Asegura que la imagen cubra todo el espacio disponible */
